# translation-editor

./: .env.example  .gitignore  .vercelignore  AGENTS.md  CHUNKING_STRATEGY_PLAN.md  CLAUDE.md  ENV.md  FLOATING-CHAT-SPEC.md  MARKDOWN_TRANSLATION_PLAN.md  README.md  REVIEW_ANALYSIS.md  Tasks-to-do.md  bugs.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  prd.md  progress.md  review_tool_improvement.md  secret_manager.md  tailwind.config.js  tasks-by-phase.md  test-harness.html  trd.md  tsconfig.json  user-journey.md  vercel.json  vite.config.ts  vitest.config.ts
.claude/: CLAUDE.md  architecture.md  gotchas.md  patterns.md  testing.md
.claude/agents/: README.md  ai-chain.md  docs-sync.md  editor.md  issue-analyzer.md  issue-tracker.md  langchain-agent-auditor.md  mcp-connector.md  race-condition-hunter.md  review.md  store-sync.md  tauri-bridge.md
.claude/commands/: bump-version.md  commit.md  update-docs.md
.claude/issues/: review-apply-text-not-found.md
.claude/plans/: review-highlight-fix.md
.claude/rules/: ai-chain.md  editor.md  mcp-connector.md  review.md  stores.md  tauri-bridge.md
.claude/skills/: README.md  dev.md  sync-types.md  test-ai.md  typecheck.md
.cursor/: worktrees.json
.cursor/plans/: langchain_tool_optimization_d0cdf999.plan.md
.cursor/rules/: 00-global.mdc  ai-development.mdc  code-review.mdc  project-rules.mdc  tauri-coding-rules.mdc  tauri-ipc-wrapper.mdc  tiptap-editor.mdc
.github/scripts/: generate-release-notes.sh
.github/workflows/: build.yml
.husky/: post-merge  pre-commit
.tmp/: langchain-latest.txt
api/: tsconfig.json
api/ai/: chat.ts  providers.ts  review.ts  translate.ts
dist-web/: index.html  loader.js.map
dist-web/assets/: cssMode-BZ4yR__B.js  cssMode-GNhp5AZ3.js  editor.worker-D7qvTV5L.js  freemarker2-CCM6hwT9.js  freemarker2-CdVRcCnM.js  handlebars-0c9OKJWo.js  handlebars-DyIVgPbc.js  html-CJMGolHY.js  html-whPaUBhd.js  htmlMode-B6MBJEHS.js  htmlMode-v0wyIT70.js  index-BHJzxBfI.js  index-BOOaghZY.js  index-BZatZimR.js  index-BktOPeX4.css  (+22 more)
docs/: AUTO_UPDATE_IMPLEMENTATION.md  CODE_REVIEW_2026-01-21.md  CODE_REVIEW_2026-01-21_v2.md  CODE_REVIEW_v1.1.0.md  INDEX.md  issues.md  issues_progress.md  review-apply-improvement-analysis.md  review-apply-suggestion-progress.md  review-apply-suggestion.md  review_improvement.md  tiptap-extension-implementation-progress.md  tiptap-extension-improvement-plan.md
e2e/: paste-normalizer.spec.ts
playwright-report/: index.html
release/: CHANGELOG.md  README.md
scripts/: build-sidecar.mjs  fetch-adf.ts  pkg-config.json  tauri-build.mjs  tauri-dev.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: mcp-proxy.cjs
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs  utils.rs
src-tauri/src/commands/: attachments.rs  block.rs  brave_search.rs  chat.rs  confluence.rs  connector.rs  glossary.rs  history.rs  mcp.rs  mod.rs  notion.rs  pptx.rs  project.rs  secrets.rs  secure_store.rs  storage.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/mcp/: client.rs  mod.rs  notion_client.rs  notion_oauth.rs  oauth.rs  registry.rs  types.rs
src-tauri/src/notion/: client.rs  mod.rs  types.rs
src-tauri/src/secrets/: manager.rs  mod.rs  vault.rs
tasks/: README.md  mcp-specs.md  notion-mcp-implementation.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md
(+206 files in other folders)
