[package]
name = "integrated-translation-editor"
version = "0.1.0"
description = "AI를 동료로, 번역을 예술로 - Integrated Translation Editor"
authors = ["ITE Team"]
edition = "2021"

[lib]
name = "ite_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
md5 = "0.7"
calamine = "0.26"
pdf-extract = "0.7"
docx-rs = "0.4"
zip = "2.2"
quick-xml = "0.37"
keyring = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
