[package]
name = "OddEyes"
version = "1.2.3"
description = "인간 번역사를 위한 AI 번역 에디터 - OddEyes.ai"
authors = ["OddEyes.ai Team"]
edition = "2021"

[lib]
name = "ite_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2.6"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
md5 = "0.7"
calamine = "0.26"
pdf-extract = "0.7"
docx-rs = "0.4"
zip = "2.2"
quick-xml = "0.37"
keyring = "2"
# MCP SSE 클라이언트 (Node.js 의존성 제거)
reqwest-eventsource = "0.6"
futures = "0.3"
oauth2 = { version = "4", default-features = false, features = ["reqwest"] }
url = "2"
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
open = "5"
once_cell = "1"
urlencoding = "2"
# Secret Manager (AEAD encryption + memory safety)
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["derive"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
